log
Fri 23 Sep 2022 11:34:41 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:17: error: invalid initializer
   40 |     TreeMap t = (TreeMap*)malloc(sizeof(TreeMap));
      |                 ^
treemap.c:41:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   41 |     t->root = NULL;
      |      ^~
treemap.c:42:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |     t->current = NULL;
      |      ^~
treemap.c:43:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |     t->lower_than = lower_than;
      |      ^~
Compilation failed
4a9645b
Fri 23 Sep 2022 11:35:05 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
923b152
Fri 23 Sep 2022 11:35:17 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
76a4268
